[MM-11422] Fix show more/less text, add gradient on cutting off attachment and reduce height of attachment text preview (#1520)
* fix show more/less text, add gradient on cutting off attachment and reduce height of attachment text preview

* add ShowMore component and make attachment text to have similar behavior like long post

--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -168,8 +168,12 @@
         padding-right: 60px;
     }
 
+    .post-attachment-collapse__show-more {
+        padding-right: 0;
+    }
+
     .sidebar--right {
-        .post-collapse__show-more {
+        .post-collapse__show-more, .post-attachment-collapse__show-more {
             padding-right: 0;
         }
     }
